--- a/src/main/resources/templates/addCategory.html
+++ b/src/main/resources/templates/addCategory.html
@@ -22,7 +22,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .form-container h2 {
-            margin-top: 0;
+            margin-top: 10px;
             margin-bottom: 20px;
             font-size: 24px;
             color: #333;
@@ -33,8 +33,8 @@
         }
         .form-container form input[type="text"] {
             background-color: #E1DEDE;
+            margin-bottom: 20px;
             padding: 10px;
-            margin-bottom: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
             font-size: 16px;
