--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -54,7 +54,7 @@
     <h1>Edit Category</h1>
     <form th:action="@{/sidebarUpdate/{id}(id=${category.id})}" method="post">
         <input type="text" name="category" th:value="${category.category}" placeholder="카테고리를 입력하세요" required/>
-        <input type="submit" value="Update Todo"/>
+        <input type="submit" value="Update Category"/>
     </form>
 </div>
 </body>
