--- a/src/main/resources/templates/editTodo.html
+++ b/src/main/resources/templates/editTodo.html
@@ -47,6 +47,12 @@
         input[type="submit"]:hover {
             background-color: #218838;
         }
+        select {
+            margin-bottom: 10px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -56,7 +62,7 @@
         <input type="text" name="title" th:value="${todo.title}" placeholder="제목을 입력하세요" required/>
         <input type="text" name="todo" th:value="${todo.todo}" placeholder="할 일을 입력하세요" required/>
         <select name="category">
-            <option value="none" hidden>tags</option>
+            <option value="none" hidden>Category</option>
             <option th:each="category : ${categories}" th:text="${category.category}"></option>
         </select>
 <!--        <input type="text" name="category" th:value="${todo.category}" placeholder="카테고리를 입력하세요"/>-->
