todo table에 category_id 추가 후 join, 카테고리 수정, 삭제 기능 구현 성공!

--- a/src/main/resources/templates/editTodo.html
+++ b/src/main/resources/templates/editTodo.html
@@ -63,7 +63,7 @@
         <input type="text" name="todo" th:value="${todo.todo}" placeholder="할 일을 입력하세요" required/>
         <select name="category">
             <option value="none" hidden>Category</option>
-            <option th:each="category : ${categories}" th:text="${category.category}"></option>
+            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.category}"></option>
         </select>
 <!--        <input type="text" name="category" th:value="${todo.category}" placeholder="카테고리를 입력하세요"/>-->
         <input type="submit" value="Update Todo"/>
